Add programmatic export of jdk.compiler packages, to avoid having to manually declare --add-exports in JDK 16+